force-app/main/default/objects/Configuration_Settings__c/Configuration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This configuration is used to maintain credentials and token for making a Owlin API calls</description>
    <label>Configuration Settings</label>
</CustomObject>