force-app/main/default/objects/Configuration_Settings__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check the primary configuration for Owlin</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>