force-app/main/default/objects/Configuration_Settings__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Field to store token to make API calls based on expiry date</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>