force-app/main/default/objects/Configuration_Settings__c/fields/Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_Date__c</fullName>
    <description>Expiry date of the token</description>
    <label>Token Expiry Date</label>
    <type>Date</type>
</CustomField>